Updates from Overleaf

--- a/sources_corrected.bib
+++ b/sources_corrected.bib
@@ -1,4 +1,56 @@
 
+@article{gabor_theory_1946,
+	title = {Theory of communication: The analysis of information},
+	volume = {93},
+	issn = {2054-0604},
+	url = {https://digital-library.theiet.org/content/journals/10.1049/ji-3-2.1946.0074},
+	doi = {10.1049/ji-3-2.1946.0074},
+	shorttitle = {Theory of communication. Part 1},
+	pages = {429--441},
+	number = {26},
+	journaltitle = {Journal of the Institution of Electrical Engineers - Part {III}: Radio and Communication Engineering},
+	author = {Gabor, D.},
+	urldate = {2023-07-11},
+	date = {1946-11},
+	langid = {english},
+}
+
+@article{stettler_lateral_2002,
+	title = {Lateral Connectivity and Contextual Interactions in Macaque Primary Visual Cortex},
+	volume = {36},
+	issn = {08966273},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0896627302010292},
+	doi = {10.1016/S0896-6273(02)01029-2},
+	pages = {739--750},
+	number = {4},
+	journaltitle = {Neuron},
+	shortjournal = {Neuron},
+	author = {Stettler, Dan D. and Das, Aniruddha and Bennett, Jean and Gilbert, Charles D.},
+	urldate = {2023-08-13},
+	date = {2002-11},
+	langid = {english},
+}
+
+@article{liang_interactions_2017,
+	title = {Interactions between feedback and lateral connections in the primary visual cortex},
+	volume = {114},
+	issn = {0027-8424, 1091-6490},
+	url = {https://pnas.org/doi/full/10.1073/pnas.1706183114},
+	doi = {10.1073/pnas.1706183114},
+	abstract = {Significance
+            One of the fundamental tasks of vision is to group the image elements that belong to one object and to segregate them from other objects and the background. Such a process, known as contour integration, is thought of as involving both long-range horizontal connections in the primary visual cortex (V1) and feedback influences from higher cortical areas such as V4. Using conditional Granger causality analysis of simultaneously recorded neurons in monkey visual cortical areas V1 and V4, we are able to dissect the respective contributions of intraareal and interareal interactions during contour integration, indicating that feedback and lateral connections work synergistically to group and segment visual image components.
+          , 
+            Perceptual grouping of line segments into object contours has been thought to be mediated, in part, by long-range horizontal connectivity intrinsic to the primary visual cortex (V1), with a contribution by top-down feedback projections. To dissect the contributions of intraareal and interareal connections during contour integration, we applied conditional Granger causality analysis to assess directional influences among neural signals simultaneously recorded from visual cortical areas V1 and V4 of monkeys performing a contour detection task. Our results showed that discounting the influences from V4 markedly reduced V1 lateral interactions, indicating dependence on feedback signals of the effective connectivity within V1. On the other hand, the feedback influences were reciprocally dependent on V1 lateral interactions because the modulation strengths from V4 to V1 were greatly reduced after discounting the influences from other V1 neurons. Our findings suggest that feedback and lateral connections closely interact to mediate image grouping and segmentation.},
+	pages = {8637--8642},
+	number = {32},
+	journaltitle = {Proceedings of the National Academy of Sciences},
+	shortjournal = {Proc. Natl. Acad. Sci. U.S.A.},
+	author = {Liang, Hualou and Gong, Xiajing and Chen, Minggui and Yan, Yin and Li, Wu and Gilbert, Charles D.},
+	urldate = {2023-08-13},
+	date = {2017-08-08},
+	langid = {english},
+}
+
 @incollection{thrun_introduction_1998,
 	location = {Boston, {MA}, {USA}},
 	title = {Introduction and Overview},
@@ -2565,22 +2617,6 @@ matching state-of-the-art model-free and model-based algorithms on {MuJoCo} cont
 	langid = {english},
 }
 
-@article{gabor_theory_1946,
-	title = {Theory of communication. Part 1: The analysis of information},
-	volume = {93},
-	issn = {2054-0604},
-	url = {https://digital-library.theiet.org/content/journals/10.1049/ji-3-2.1946.0074},
-	doi = {10.1049/ji-3-2.1946.0074},
-	shorttitle = {Theory of communication. Part 1},
-	pages = {429--441},
-	number = {26},
-	journaltitle = {Journal of the Institution of Electrical Engineers - Part {III}: Radio and Communication Engineering},
-	author = {Gabor, D.},
-	urldate = {2023-07-11},
-	date = {1946-11},
-	langid = {english},
-}
-
 @misc{hinton_improving_2012,
 	title = {Improving neural networks by preventing co-adaptation of feature detectors},
 	url = {http://arxiv.org/abs/1207.0580},
@@ -4604,22 +4640,6 @@ matching state-of-the-art model-free and model-based algorithms on {MuJoCo} cont
 	author = {Fukushima, Kunihiko},
 	urldate = {2023-06-27},
 	date = {1980-04},
-	langid = {english},
-}
-
-@article{fukushima_neocognitron_2007,
-	title = {Neocognitron},
-	volume = {2},
-	issn = {1941-6016},
-	url = {http://www.scholarpedia.org/article/Neocognitron},
-	doi = {10.4249/scholarpedia.1717},
-	pages = {1717},
-	number = {1},
-	journaltitle = {Scholarpedia},
-	shortjournal = {Scholarpedia},
-	author = {Fukushima, Kunihiko},
-	urldate = {2023-06-27},
-	date = {2007},
 	langid = {english},
 }
 
