--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -84,7 +84,7 @@ Negative Hebbian learning, while facilitating the filtering out of irrelevant fe
 Subsequently, it is discussed why the features become mutually exclusive.
 The primary issue is that, except for one input channel, there are more negative correlations between the input channels and a single output channel, as illustrated in \figref{correlations_hebb_learning}.
 In this context, ``negative correlation'' refers to disjointly active cells, while ``positive correlation'' refers to cells that fire together.
-In the case of the vertical line, the output channel $A$ is expected to roughly reassemble the line.
+In the case of the vertical line, the output channel $A$ is expected to reassemble the line roughly.
 
 Hebbian learning compares this output with the input channels, strengthening the weights for positively correlated input-output pairs and weakening them for negatively correlated pairs.
 These correlations are visualised in the lower part of \figref{correlations_hebb_learning}.
