--- a/tex/fundamentals.tex
+++ b/tex/fundamentals.tex
@@ -29,9 +29,10 @@ Interneurons establish connections between neurons within the same brain or spin
 However, this classification is a simplification, as the human brain consists of approximately 100 billion neurons \sidecite{herculano-houzel_human_2009} with diverse molecular, morphological, connectional, and functional properties \sidecite{zeng_neuronal_2017}.
 
 Inspired by biological neurons, several variants of artificial neurons have been proposed in the literature and are discussed in \secref{ann}.
-However, artificial neurons are simplified models compared to their biological counterparts, ignoring much complexity. Like biological neurons, artificial neurons are usually connected to other neurons and form an artificial neural network \sidecite{prince_understanding_2023}. Although the neurons in the first layer of an artificial network could be considered sensory neurons, the neurons in the last layer could be considered motor neurons, and the neurons in the middle layer could be considered interneurons, this distinction is less meaningful because artificial neurons have always the same inner structure regardless of their position, except for variations in their activation function (c.f. \secref{ann}).
+However, unlike their biological counterparts, artificial neurons are simplified models, ignoring much complexity. Like biological neurons, artificial neurons are usually connected to other neurons and form an artificial neural network \sidecite{prince_understanding_2023}. Although the neurons in the first layer of an artificial network could be considered sensory neurons, the neurons in the last layer could be considered motor neurons, and the neurons in the middle layer could be considered interneurons, this distinction is less meaningful because artificial neurons always have the same inner structure regardless of their position, except for variations in their activation function (c.f. \secref{ann}).
 
-Furthermore, artificial neural networks (ANNs) have a simpler organisational structure than the human brain. ANNs typically consist of one or a few network parts, such as encoders, which map data to a latent space, and decoders, which convert data from the latent space into a target vector \sidecite{goodfellow_deep_2016}. ANNs are considered monolithic because they are hierarchical and typically trained in an end-to-end fashion with a single error correction signal \sidecite{glasmachers_limits_2017}. In contrast, the human brain consists of many interconnected organisational units, each responsible for a specific function \sidecite{felleman_visual_cortex}. For example, in the cerebral cortex, which is responsible for vision, there exist numerous small sub-units dedicated to specific tasks as illustrated in \figref{visual_cortext}. Furthermore, the human brain does not comprise an organisational hierarchy as ANNs. In the human brain, each unit applies similar deterministic functions to the information it receives \sidecite{mountcastle_organizing_1978, mountcastle_columnar_1997}. Furthermore, the biological network in the human brain is dynamic and subject to change through growth and reorganisation, known as neuroplasticity or neuronal plasticity \sidecite{costandi_neuroplasticity_2016}.
+Furthermore, artificial neural networks (ANNs) have a simpler organisational structure than the human brain. ANNs typically consist of one or a few network parts, such as encoders, which map data to a latent space, and decoders, which convert data from the latent space into a target vector \sidecite{goodfellow_deep_2016}. ANNs are considered monolithic because they are hierarchical and typically trained in an end-to-end fashion with a single error correction signal \sidecite{glasmachers_limits_2017}. In contrast, the human brain consists of many interconnected organisational units, each responsible for a specific function \sidecite{felleman_distributed_1991}. For example, in the cerebral cortex, which is responsible for vision, numerous small sub-units exist dedicated to specific tasks as illustrated in \figref{visual_cortext}.
+Furthermore, the human brain does not comprise an organisational hierarchy as ANNs. In the human brain, each unit applies similar deterministic functions to the information it receives \sidecite{mountcastle_organizing_1978, mountcastle_columnar_1997}. Furthermore, the biological network in the human brain is dynamic and subject to change through growth and reorganisation, known as neuroplasticity or neuronal plasticity \sidecite{costandi_neuroplasticity_2016}.
 
 In addition to the structural and functional differences, biological and artificial networks differ in their learning strategies.
 An artificial learning system requires a feedback signal from which it can learn.
@@ -167,7 +168,7 @@ Therefore, this thesis does not rely on such global error correction algorithms 
 \subsection{Convolutional Networks}\seclbl{cnns}
 In \secref{fully_connected_layer}, fully connected layers are discussed.
 However, a problem with fully connected layers is that they are not position invariant, meaning they cannot recognise patterns regardless of their location in the input.
-Convolutional neural networks (CNNs) \sidecite{fukushima_neocognitron_1980, waibel_phoneme_1987, lecun_backpropagation_1989} are inspired by biological processes \sidecite{hubel_receptive_1968, fukushima_neocognitron_2007} and can overcome this limitation: CNNs exhibit position equivariance by applying the same weights at all input positions.
+Convolutional neural networks (CNNs) \sidecite{fukushima_neocognitron_1980, waibel_phoneme_1987, lecun_backpropagation_1989} are inspired by biological processes \sidecite{hubel_receptive_1968, fukushima_visual_1969} and can overcome this limitation: CNNs exhibit position equivariance by applying the same weights at all input positions.
 Like fully connected networks, a CNN comprises an input layer, an output layer, and multiple hidden layers in between.
 A typical CNN consists of subsequently connected convolutional layers and pooling layers.
 Usually, an activation function is applied after each convolutional layer, while no activation function is used after pooling layers \sidecite{goodfellow_deep_2016}.
