--- a/tex/preface.tex
+++ b/tex/preface.tex
@@ -11,9 +11,9 @@ While this definition sounds straightforward, working successfully in science re
 Throughout my Master's studies, I have had the privilege of delving deeper into science and applying the obtained knowledge in research projects at the Centre for Artificial Intelligence (CAI) of the Zurich University of Applied Sciences (ZHAW).
 This daily engagement with scientific work has proven extremely valuable in writing this thesis and will undoubtedly help me in the future.
 
-However, I still faced challenges in writing this thesis:
+However, I still faced challenges when writing this thesis:
 As someone with an industry and engineering background, I tend to approach tasks with a ``do-it'' mentality and intuitively refine my ideas with hands-on experimentation. 
-In this Master's thesis, it took me some time to make the transition from this do-it mindset to that of a researcher who is also strong in theoretical foundations. Thanks to this Master's thesis, I believe I now balance implementation and studying theory much better.
+In this Master's thesis, it took me some time to transition from this do-it mindset to that of a researcher who is also strong in theoretical foundations. Thanks to this Master's thesis, I now better balance implementation and studying theory.
 
 Completing this thesis spanned an entire year, the maximum duration allowed by my university.
 The process of formulating and refining the theory was punctuated by setbacks and experiments that did not produce the desired results.
@@ -42,7 +42,7 @@ Further thanks go to Dr. Jan Deriu.
 He has always helped to translate abstract ideas into concrete algorithms and to get them running.
 It's impressive how your understanding of deep learning, algorithms, and math can make complex problems look so simple.
 To Prof. Dr. Christoph von der Malsburg for his seemingly endless patience in introducing me to neuroscience.
-You have inspired me regularly with ideas and opened up a new way of thinking about biological and artificial learning (this was also the inspiration for Geoffrey E. Hinton's quote at the beginning of this thesis, although I wouldn't presume to say that I will change the future).
+You have inspired me regularly with ideas and opened up a new way of thinking about biological and artificial learning (this was also the inspiration for using Geoffrey E. Hinton's quote at the beginning of this thesis, although I wouldn't presume to say that I will change the future).
 Even though we couldn't implement all of your ideas in this thesis, I learned a lot in our discussions and hope that I will be able to tackle more of your thoughts in the future.
 
 The most profound thanks, however, goes to my family, who made this journey possible for me:
